# todoist_log_exe

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/todoist_log_exe/: main.py  user_entry.py
